// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@knex/core - SelectBuilder complex join with empty in 1`] = `
Immutable.SelectNodes {
  "__operation": "SELECT",
  "from": "users",
  "where": Immutable.List [],
  "select": Immutable.List [
    "*",
  ],
  "join": Immutable.List [],
  "having": Immutable.List [],
  "group": Immutable.List [],
  "order": Immutable.List [],
  "union": Immutable.List [],
  "limit": null,
  "offset": null,
  "alias": null,
  "distinct": false,
  "lock": null,
  "meta": Immutable.Map {},
}
`;

exports[`@knex/core - SelectBuilder complex join with empty in 2`] = `
Object {
  "fragments": Array [
    "SELECT * FROM users",
  ],
  "query": "SELECT * FROM users",
  "sql": "SELECT * FROM users",
  "values": Array [],
}
`;

exports[`@knex/core - SelectBuilder complex join with nest conditional statements 1`] = `
Immutable.SelectNodes {
  "__operation": "SELECT",
  "from": "users",
  "where": Immutable.List [],
  "select": Immutable.List [
    "*",
  ],
  "join": Immutable.List [],
  "having": Immutable.List [],
  "group": Immutable.List [],
  "order": Immutable.List [],
  "union": Immutable.List [],
  "limit": null,
  "offset": null,
  "alias": null,
  "distinct": false,
  "lock": null,
  "meta": Immutable.Map {},
}
`;

exports[`@knex/core - SelectBuilder complex join with nest conditional statements 2`] = `
Object {
  "fragments": Array [
    "SELECT * FROM users",
  ],
  "query": "SELECT * FROM users",
  "sql": "SELECT * FROM users",
  "values": Array [],
}
`;

exports[`@knex/core - SelectBuilder cross join 1`] = `
Immutable.SelectNodes {
  "__operation": "SELECT",
  "from": "users",
  "where": Immutable.List [],
  "select": Immutable.List [
    "*",
  ],
  "join": Immutable.List [],
  "having": Immutable.List [],
  "group": Immutable.List [],
  "order": Immutable.List [],
  "union": Immutable.List [],
  "limit": null,
  "offset": null,
  "alias": null,
  "distinct": false,
  "lock": null,
  "meta": Immutable.Map {},
}
`;

exports[`@knex/core - SelectBuilder cross join 2`] = `
Object {
  "fragments": Array [
    "SELECT * FROM users",
  ],
  "query": "SELECT * FROM users",
  "sql": "SELECT * FROM users",
  "values": Array [],
}
`;

exports[`@knex/core - SelectBuilder full outer join 1`] = `
Immutable.SelectNodes {
  "__operation": "SELECT",
  "from": "users",
  "where": Immutable.List [],
  "select": Immutable.List [
    "*",
  ],
  "join": Immutable.List [],
  "having": Immutable.List [],
  "group": Immutable.List [],
  "order": Immutable.List [],
  "union": Immutable.List [],
  "limit": null,
  "offset": null,
  "alias": null,
  "distinct": false,
  "lock": null,
  "meta": Immutable.Map {},
}
`;

exports[`@knex/core - SelectBuilder full outer join 2`] = `
Object {
  "fragments": Array [
    "SELECT * FROM users",
  ],
  "query": "SELECT * FROM users",
  "sql": "SELECT * FROM users",
  "values": Array [],
}
`;

exports[`@knex/core - SelectBuilder join + left join 1`] = `
Immutable.SelectNodes {
  "__operation": "SELECT",
  "from": "users",
  "where": Immutable.List [],
  "select": Immutable.List [
    "*",
  ],
  "join": Immutable.List [],
  "having": Immutable.List [],
  "group": Immutable.List [],
  "order": Immutable.List [],
  "union": Immutable.List [],
  "limit": null,
  "offset": null,
  "alias": null,
  "distinct": false,
  "lock": null,
  "meta": Immutable.Map {},
}
`;

exports[`@knex/core - SelectBuilder join + left join 2`] = `
Object {
  "fragments": Array [
    "SELECT * FROM users",
  ],
  "query": "SELECT * FROM users",
  "sql": "SELECT * FROM users",
  "values": Array [],
}
`;

exports[`@knex/core - SelectBuilder multi-statement join 1`] = `
Immutable.SelectNodes {
  "__operation": "SELECT",
  "from": "users",
  "where": Immutable.List [],
  "select": Immutable.List [
    "*",
  ],
  "join": Immutable.List [],
  "having": Immutable.List [],
  "group": Immutable.List [],
  "order": Immutable.List [],
  "union": Immutable.List [],
  "limit": null,
  "offset": null,
  "alias": null,
  "distinct": false,
  "lock": null,
  "meta": Immutable.Map {},
}
`;

exports[`@knex/core - SelectBuilder multi-statement join 2`] = `
Object {
  "fragments": Array [
    "SELECT * FROM users",
  ],
  "query": "SELECT * FROM users",
  "sql": "SELECT * FROM users",
  "values": Array [],
}
`;

exports[`@knex/core - SelectBuilder right (outer) join 1`] = `
Immutable.SelectNodes {
  "__operation": "SELECT",
  "from": "users",
  "where": Immutable.List [],
  "select": Immutable.List [
    "*",
  ],
  "join": Immutable.List [],
  "having": Immutable.List [],
  "group": Immutable.List [],
  "order": Immutable.List [],
  "union": Immutable.List [],
  "limit": null,
  "offset": null,
  "alias": null,
  "distinct": false,
  "lock": null,
  "meta": Immutable.Map {},
}
`;

exports[`@knex/core - SelectBuilder right (outer) join 2`] = `
Object {
  "fragments": Array [
    "SELECT * FROM users",
  ],
  "query": "SELECT * FROM users",
  "sql": "SELECT * FROM users",
  "values": Array [],
}
`;

exports[`@knex/core - SelectBuilder select columns 1`] = `
Immutable.SelectNodes {
  "__operation": "SELECT",
  "from": null,
  "where": Immutable.List [],
  "select": Immutable.List [
    "a",
    "b",
  ],
  "join": Immutable.List [],
  "having": Immutable.List [],
  "group": Immutable.List [],
  "order": Immutable.List [],
  "union": Immutable.List [],
  "limit": null,
  "offset": null,
  "alias": null,
  "distinct": false,
  "lock": null,
  "meta": Immutable.Map {},
}
`;

exports[`@knex/core - SelectBuilder select columns 2`] = `
Object {
  "fragments": Array [
    "SELECT a, b",
  ],
  "query": "SELECT a, b",
  "sql": "SELECT a, b",
  "values": Array [],
}
`;

exports[`@knex/core - SelectBuilder select columns, with builder 1`] = `
Immutable.SelectNodes {
  "__operation": "SELECT",
  "from": null,
  "where": Immutable.List [],
  "select": Immutable.List [
    "a",
    "b",
    Immutable.SubQueryNode {
      "__typename": "SubQueryNode",
      "ast": Immutable.SelectNodes {
        "__operation": "SELECT",
        "from": null,
        "where": Immutable.List [],
        "select": Immutable.List [
          "c",
        ],
        "join": Immutable.List [],
        "having": Immutable.List [],
        "group": Immutable.List [],
        "order": Immutable.List [],
        "union": Immutable.List [],
        "limit": null,
        "offset": null,
        "alias": "sub",
        "distinct": false,
        "lock": null,
        "meta": Immutable.Map {},
      },
    },
  ],
  "join": Immutable.List [],
  "having": Immutable.List [],
  "group": Immutable.List [],
  "order": Immutable.List [],
  "union": Immutable.List [],
  "limit": null,
  "offset": null,
  "alias": null,
  "distinct": false,
  "lock": null,
  "meta": Immutable.Map {},
}
`;

exports[`@knex/core - SelectBuilder select columns, with builder 2`] = `
Object {
  "fragments": Array [
    "SELECT a, b, (SELECT c) AS sub",
  ],
  "query": "SELECT a, b, (SELECT c) AS sub",
  "sql": "SELECT a, b, (SELECT c) AS sub",
  "values": Array [],
}
`;

exports[`@knex/core - SelectBuilder select columns, with raw 1`] = `
Immutable.SelectNodes {
  "__operation": "SELECT",
  "from": null,
  "where": Immutable.List [],
  "select": Immutable.List [
    "a",
    "b",
    Immutable.RawNode {
      "__typename": "RawNode",
      "fragments": Immutable.List [
        "COUNT(*) as cnt",
      ],
      "bindings": Immutable.List [],
    },
  ],
  "join": Immutable.List [],
  "having": Immutable.List [],
  "group": Immutable.List [],
  "order": Immutable.List [],
  "union": Immutable.List [],
  "limit": null,
  "offset": null,
  "alias": null,
  "distinct": false,
  "lock": null,
  "meta": Immutable.Map {},
}
`;

exports[`@knex/core - SelectBuilder select columns, with raw 2`] = `
Object {
  "fragments": Array [
    "SELECT a, b, COUNT(*) as cnt",
  ],
  "query": "SELECT a, b, COUNT(*) as cnt",
  "sql": "SELECT a, b, COUNT(*) as cnt",
  "values": Array [],
}
`;

exports[`@knex/core - SelectBuilder select from table 1`] = `
Immutable.SelectNodes {
  "__operation": "SELECT",
  "from": "users",
  "where": Immutable.List [],
  "select": Immutable.List [
    "a",
    "b",
  ],
  "join": Immutable.List [],
  "having": Immutable.List [],
  "group": Immutable.List [],
  "order": Immutable.List [],
  "union": Immutable.List [],
  "limit": null,
  "offset": null,
  "alias": null,
  "distinct": false,
  "lock": null,
  "meta": Immutable.Map {},
}
`;

exports[`@knex/core - SelectBuilder select from table 2`] = `
Object {
  "fragments": Array [
    "SELECT a, b FROM users",
  ],
  "query": "SELECT a, b FROM users",
  "sql": "SELECT a, b FROM users",
  "values": Array [],
}
`;

exports[`@knex/core - SelectBuilder where clause 1`] = `
Immutable.SelectNodes {
  "__operation": "SELECT",
  "from": "users",
  "where": Immutable.List [
    Immutable.WhereExpressionNode {
      "__typename": "WhereExpressionNode",
      "not": null,
      "column": "id",
      "operator": "=",
      "value": 1,
      "andOr": "AND",
    },
  ],
  "select": Immutable.List [],
  "join": Immutable.List [],
  "having": Immutable.List [],
  "group": Immutable.List [],
  "order": Immutable.List [],
  "union": Immutable.List [],
  "limit": null,
  "offset": null,
  "alias": null,
  "distinct": false,
  "lock": null,
  "meta": Immutable.Map {},
}
`;

exports[`@knex/core - SelectBuilder where clause 2`] = `
Object {
  "fragments": Array [
    "SELECT * FROM users WHERE id = ",
    "",
  ],
  "query": "SELECT * FROM users WHERE id = ?",
  "sql": "SELECT * FROM users WHERE id = 1",
  "values": Array [
    1,
  ],
}
`;

exports[`@knex/core - SelectBuilder where subquery 1`] = `
Immutable.SelectNodes {
  "__operation": "SELECT",
  "from": "users",
  "where": Immutable.List [
    Immutable.WhereSubNode {
      "__typename": "WhereSubNode",
      "not": null,
      "andOr": "AND",
      "ast": Immutable.WhereClauseNodes {
        "__clause": "WhereClause",
        "where": Immutable.List [
          Immutable.WhereExpressionNode {
            "__typename": "WhereExpressionNode",
            "not": null,
            "column": "id",
            "operator": "=",
            "value": 1,
            "andOr": "AND",
          },
          Immutable.WhereExpressionNode {
            "__typename": "WhereExpressionNode",
            "not": null,
            "column": "id",
            "operator": "=",
            "value": 2,
            "andOr": "AND",
          },
        ],
      },
    },
    Immutable.WhereExpressionNode {
      "__typename": "WhereExpressionNode",
      "not": null,
      "column": "id",
      "operator": "=",
      "value": 4,
      "andOr": "OR",
    },
  ],
  "select": Immutable.List [],
  "join": Immutable.List [],
  "having": Immutable.List [],
  "group": Immutable.List [],
  "order": Immutable.List [],
  "union": Immutable.List [],
  "limit": null,
  "offset": null,
  "alias": null,
  "distinct": false,
  "lock": null,
  "meta": Immutable.Map {},
}
`;

exports[`@knex/core - SelectBuilder where subquery 2`] = `
Object {
  "fragments": Array [
    "SELECT * FROM users WHERE (id = ",
    " AND id = ",
    ") OR id = ",
    "",
  ],
  "query": "SELECT * FROM users WHERE (id = ? AND id = ?) OR id = ?",
  "sql": "SELECT * FROM users WHERE (id = 1 AND id = 2) OR id = 4",
  "values": Array [
    1,
    2,
    4,
  ],
}
`;
